--- a/README
+++ b/README
@@ -10,10 +10,26 @@ MBProgressHUD
 FMDatabase sqlite framework
 Three20 (to be continue…)
 
+this is only my personal study project...hope it would become more and more stronger
+
 Object Mapping
+support from local json string map to a custom entity
+support from remote json string map to a custome entity
+can make a relationship to do mapping
 
 Categories & Extension
+Foundation category
+UIKit category
 
 Utilities
+email sender
+sms sender
+keychain helper
 
 UI controls & common functions
+Base Navigation controller
+Base Tabbar controller
+Base Tabbar item
+Multi-column view controller
+Index view controller
+TTNavigation
